--- a/public/doa.html
+++ b/public/doa.html
@@ -1,4 +1,18 @@
-<h1>Oh, hello</h1>
+
+
+<html>
+  <body>
+    <h1>You're using a layout</h1>
+    <p>
+      <h3> I'm a header</h3>
+      <p>Put things in the header</p>
+    <a href='http://google.com'>This is a link to google</a>
+      <a href='me.html'>Me</a>
+
+    </p>
+    <hr />
+    <div>
+      <h1>Oh, hello</h1>
 <h2>My name is Doa and I'll link you to my old portfolio below.</h2>
 <a href="http://doaport.tumblr.com">My Port</a>
 
@@ -11,3 +25,12 @@
     <li>My port includes the following types of shots: commericial</li>
   
 </ul>
+    </div>
+    <hr />
+    <div>
+      <h3> I'm a footer</h3>
+      <p>Put things in the footer</p>
+      <a href="http://google.com">Just in case you need another link to google</a>
+    </div>
+  </body>
+</html>
