--- a/public/me.html
+++ b/public/me.html
@@ -1,1 +1,24 @@
-foo
+
+
+<html>
+  <body>
+    <h1>You're using a layout</h1>
+    <p>
+      <h3> I'm a header</h3>
+      <p>Put things in the header</p>
+    <a href='http://google.com'>This is a link to google</a>
+      <a href='me.html'>Me</a>
+
+    </p>
+    <hr />
+    <div>
+      foo
+    </div>
+    <hr />
+    <div>
+      <h3> I'm a footer</h3>
+      <p>Put things in the footer</p>
+      <a href="http://google.com">Just in case you need another link to google</a>
+    </div>
+  </body>
+</html>
